// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEmphasisSkip renders 0 1`] = `
Array [
  .c0 {
  text-emphasis-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders function 1`] = `
Array [
  .c0 {
  text-emphasis-skip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders invalid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders negative number 1`] = `
Array [
  .c0 {
  text-emphasis-skip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-skip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-skip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-skip: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-skip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-skip: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-emphasis-skip: July;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media January {
  .c0 {
    text-emphasis-skip: September;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: November;
  }
}

@media June {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-emphasis-skip: July;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media January {
  .c0 {
    text-emphasis-skip: September;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: November;
  }
}

@media June {
  .c0 {
    text-emphasis-skip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-skip: January;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: December;
  }
}

@media January {
  .c0 {
    text-emphasis-skip: April;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: May;
  }
}

@media June {
  .c0 {
    text-emphasis-skip: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-skip: January;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: December;
  }
}

@media January {
  .c0 {
    text-emphasis-skip: April;
  }
}

@media April {
  .c0 {
    text-emphasis-skip: May;
  }
}

@media June {
  .c0 {
    text-emphasis-skip: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders postitive number 1`] = `
Array [
  .c0 {
  text-emphasis-skip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders string 1`] = `
Array [
  .c0 {
  text-emphasis-skip: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisSkip renders valid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-skip: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
